# etool

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
src/etool/: __init__.py  _cli_main.py  cli.py
src/etool/_core/: __init__.py  errors.py
src/etool/_network/: _speed.py
src/etool/_office/: _docx.py  _email.py  _excel.py  _image.py  _ipynb.py  _pdf.py  _qrcode.py
src/etool/_other/: _install.py  _password.py  _scheduler.py  _screate.py  _stdlib_usage.py
src/etools/: task_scheduler.py  test_speed.py
tests/: ex1.xlsx  ipynb_dir.ipynb  ipynb_dir.md  result.xlsx  test.docx  test.html  test.md  test.xlsx  test_etool.py
tests/ipynb_dir/: 1.ipynb  2.ipynb
tests/pdf/: result.xlsx
