[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etool"
version = "0.0.1"
authors = [
  { name="Allen", email="jiangyangcreate@gmail.com" },
]
description = "A pocwatchdog package for security monitoring"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "schedule>=1.1.0",
    "speedtest-cli>=2.1.3",
    "pynvml>=11.4.1",
    "flask",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/jiangyangcreate/pocwatchdog"
Issues = "https://github.com/jiangyangcreate/pocwatchdog/issues"